Update and rename application.yaml to application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,5 +12,5 @@ zuul:
         - limit: 5
           refresh-interval: 60
           type:
-            - origin
+            - url
   strip-prefix: true
