--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,13 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
 		</dependency>
-
+		<!--  this has an error in it
+		<dependency>
+    		<groupId>com.marcosbarbero.cloud</groupId>
+    		<artifactId>spring-cloud-zuul-ratelimit</artifactId>
+   			 <version>2.2.0.RELEASE</version>
+		</dependency>
+		-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -38,6 +44,11 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-to-slf4j</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>2.1.7.RELEASE</version>
 		</dependency>
 	</dependencies>
 
